--- a/init.supersonic.rc
+++ b/init.supersonic.rc
@@ -88,21 +88,21 @@ on boot
     write /proc/sys/net/core/rmem_max 524288
 
 service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
-    -Dwext -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
+    -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
 #   we will start as root and wpa_supplicant will switch to user wifi
 #   after setting up the capabilities required for WEXT
 #   user wifi
 #   group wifi inet keystore
-    socket wpa_wlan0 dgram 660 wifi wifi
+    socket wpa_eth0 dgram 660 wifi wifi
     disabled
     oneshot
 
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL wlan0
+service dhcpcd_eth0 /system/bin/dhcpcd -ABKL eth0
     disabled
     oneshot
 
-service iprenew_wlan0 /system/bin/dhcpcd -n
+service iprenew_eth0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
