Supersonic: Temporarily use prebuilt camera HAL compiled by rapmv78.
 * Includes libcamera.so.

 * Camera is very limited, but works as a temporary fix.

Change-Id: I589754b1f750f006e18930d1be7e44402a32b8ab

--- a/prebuilt/root/init.supersonic.rc
+++ b/prebuilt/root/init.supersonic.rc
@@ -56,6 +56,13 @@ on boot
     chown system camera /sys/devices/platform/flashlight.0/leds/flashlight/brightness
     chmod 0660          /sys/devices/platform/flashlight.0/leds/flashlight/brightness
 
+    # Add permissions for camera access
+    chmod 0666 /dev/msm_camera/config1
+    chmod 0666 /dev/msm_camera/control1
+    chmod 0666 /dev/msm_camera/frame1
+
+    chmod 0666 /dev/graphics/fb0
+
     # Camera status
     chown radio system /sys/camera_led_status/led_ril_status
     chown system system /sys/camera_led_status/led_wimax_status
