Supersonic: Add sdcard mount and symlink
Change-Id: Ib68c3cd7b9a5762b91ca417627530bdede40032b

--- a/prebuilt/root/init.supersonic.rc
+++ b/prebuilt/root/init.supersonic.rc
@@ -1,6 +1,12 @@
 import init.supersonic.usb.rc
 
 on init
+
+    export EXTERNAL_STORAGE /mnt/sdcard
+    mkdir /mnt/sdcard 0000 system system
+    # for backwards compatibility
+    symlink /mnt/sdcard /sdcard
+
     mount rootfs rootfs / remount
     mkdir /app-cache 01777 system system
     mount tmpfs tmpfs /app-cache size=8m
