Supersonic: Enable ksm
Change-Id: I9bb21713d465ed1925e1d27348518b23571830c6

--- a/prebuilt/root/init.supersonic.rc
+++ b/prebuilt/root/init.supersonic.rc
@@ -104,7 +104,7 @@ on boot
     write /sys/kernel/mm/ksm/sleep_millisecs 3000
     write /sys/kernel/mm/ksm/pages_to_scan 256
     # enable KSM
-#    write /sys/kernel/mm/ksm/run 1
+    write /sys/kernel/mm/ksm/run 1
 
     # TCP buffer size tweaks to improve throughput
     write /proc/sys/net/core/wmem_max 524288
