--- a/prebuilt/root/init.supersonic.rc
+++ b/prebuilt/root/init.supersonic.rc
@@ -93,19 +93,6 @@ on boot
     write /sys/block/mtdblock5/bdi/read_ahead_kb 4
     write /sys/block/mtdblock6/bdi/read_ahead_kb 4
 
-    # Power Management
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 245000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 998400
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
-    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 40000
-
-    # KSM defaults
-#    write /sys/kernel/mm/ksm/sleep_millisecs 1500
-    write /sys/kernel/mm/ksm/sleep_millisecs 3000
-    write /sys/kernel/mm/ksm/pages_to_scan 256
-    # enable KSM
-    write /sys/kernel/mm/ksm/run 1
-
     # TCP buffer size tweaks to improve throughput
     write /proc/sys/net/core/wmem_max 524288
     write /proc/sys/net/core/rmem_max 524288
@@ -221,3 +208,11 @@ service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
     group bluetooth net_bt_admin
     disabled
 
+service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
+    class late_start
+    user root
+    disabled
+    oneshot
+
+on property:dev.bootcomplete=1
+    start qcom-post-boot
