Supersonic: Update usb config.
 * Attempting to fix usb tether, still not working but we're on the
   right track.

Change-Id: I024529a2fc85b521faea8ffe2b4746a67c7c7476

--- a/prebuilt/root/init.supersonic.usb.rc
+++ b/prebuilt/root/init.supersonic.usb.rc
@@ -1,3 +1,14 @@
+#
+# Usb config for supersonic
+#
+on property:sys.usb.config=none
+    exec /system/bin/netcfg usb0 down
+    stop adbd
+    write /sys/class/usb_composite/adb/enable 0
+    write /sys/class/usb_composite/usb_mass_storage/enable 0
+    write /sys/class/usb_composite/rndis/enable 0
+    setprop sys.usb.state $sys.usb.config
+
 on property:sys.usb.config=adb
     write /sys/class/usb_composite/adb/enable 1
     start adbd
@@ -15,10 +26,20 @@ on property:sys.usb.config=mass_storage,adb
     setprop sys.usb.state $sys.usb.config
 
 on property:sys.usb.config=rndis
+    exec /system/bin/netcfg usb0 up
     write /sys/class/usb_composite/rndis/enable 1
     setprop sys.usb.state $sys.usb.config
 
 on property:sys.usb.config=rndis,adb
+    exec /system/bin/netcfg usb0 up
+    write /sys/class/usb_composite/rndis/enable 1
+    write /sys/class/usb_composite/adb/enable 1
+    start adbd
+    setprop sys.usb.state $sys.usb.config
+
+on property:sys.usb.config=mass_storage,rndis,adb
+    exec /system/bin/netcfg usb0 up
+    write /sys/class/usb_composite/usb_mass_storage/enable 1
     write /sys/class/usb_composite/rndis/enable 1
     write /sys/class/usb_composite/adb/enable 1
     start adbd
