supersonic: add fstab to mount /data to mmcblk0p2
Change-Id: Id79eaa2d2d64b3f878c37eaf6386853bc29c5fff

--- a/prebuilt/root/init.supersonic.rc
+++ b/prebuilt/root/init.supersonic.rc
@@ -26,6 +26,9 @@ on init
     setprop ro.CONTENT_PROVIDER_MEM 7680
     setprop ro.EMPTY_APP_MEM 8192
 
+on fs
+    mount_all /fstab.supersonic
+
 on boot
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
