--- a/prebuilt/root/init.supersonic.rc
+++ b/prebuilt/root/init.supersonic.rc
@@ -32,6 +32,8 @@ on fs
 on boot
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
+    insmod /system/lib/modules/bcmdhd.ko
+
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
