supersonic: set perms for /proc/cmdline
 fixes:

 D/TelephonyManager(  130): No /proc/cmdline
 exception=java.io.FileNotFoundException: /proc/cmdline:
 open failed: EACCES (Permission denied)

Change-Id: I9d5da53beddf83e6305d17880f556f5a3ec2fdcc

--- a/prebuilt/root/init.supersonic.rc
+++ b/prebuilt/root/init.supersonic.rc
@@ -39,6 +39,8 @@ on boot
     mkdir /data/wimax/ 0777  wimax wimax
     mkdir /data/wimax/log 0777  wimax wimax
 
+    chmod 0644 /proc/cmdline
+
     # bluetooth power up/down interface
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
